# workflow-examples

./: LICENSE  README.md
.daisy/: c_docc.yml  c_gcc.yml  cuda.yml  onnx.yml  python_apt.yml  python_conda.yml  python_venv.yml  tenstorrent_metalium.yml  tenstorrent_ttnn.yml  test_metal.yml  test_ttnn.yml  tflite_coral.yml
c/: matmul.c
cuda/: matmul.cu
tenstorrent/: README.md
tenstorrent/metalium/matmul_single_core/: CMakeLists.txt  matmul_single_core.cpp
ttnn/: matmul_tutorial.py
